--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <meta charset="UTF-8">
        <meta http-equiv="X-UA-Compatible" content="IE=edge">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>WebStudio</title>
+       <title>Студия</title>
     </head>
     <body>
         <!-- Шапка (верхняя линия)  -->
@@ -52,13 +52,13 @@
                 <h2>Чем мы занимаемся</h2>
                 <ul>
                     <li>
-                        <img src="./img/box1.jpg" alt="клавиатура и планшет" width="370">
+                        <img src="./img/notebook-smartphone.jpg" alt="ноутбук и планшет" width="370">
                     </li>
                     <li>
-                        <img src="./img/box2.jpg" alt="ноутбук и телефон" width="370">
+                        <img src="./img/notebook.jpg" alt="ноутбук и телефон" width="370">
                     </li>
                     <li>
-                        <img src="./img/box3.jpg" alt="планшет" width="370">
+                        <img src="./img/tablet.jpg" alt="планшет" width="370">
                     </li>
                 </ul>
             </section>
