--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </section>
             <!-- Особенности -->
             <section>
+                <!-- <h2></h2> -->
                 <ul>
                     <li>
                         <h3>Внимание к деталям</h3>
@@ -90,15 +91,11 @@
             </section>
         </main>
         <footer>
-            <h3 lang="en">WebStudio</h3>
+            <a href="/">WebStudio</a>
             <address>
-                <ul>
-                    <li>
-                        <p>г. Киев, пр-т Леси Украинки, 26</p>
-                        <a href="mailto:info@example.com">info@example.com</a>
-                        <a href="tel:+380991111111">+38 099 111 11 11</a>
-                    </li>
-                </ul>
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <a href="mailto:info@example.com">info@example.com</a>
+                <a href="tel:+380991111111">+38 099 111 11 11</a>
             </address>
         </footer>
     </body>
